argocd/archive-warrior/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warrior
  labels:
    app: warrior
spec:
  replicas: 6
  selector:
    matchLabels:
      app: warrior
  template:
    metadata:
      labels:
        app: warrior
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.43.0.10
        searches:
          - archive-warrior.svc.cluster.local
          - svc.cluster.local
          - cluster.local
        options:
          - name: ndots
            value: "1"
      containers:
        - image: atdr.meo.ws/archiveteam/warrior-dockerfile:latest@sha256:19337aa9157e04f6cdb8f7c6f8c98e27d14efb0d9525334995fbdb036b95e1ca
          name: warrior
          ports:
            - containerPort: 8001
              protocol: TCP
          resources:
            limits:
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "500Mi"
      nodeSelector:
        kubernetes.io/arch: amd64
