argocd/archive-warrior/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: warrior
  name: warrior
spec:
  ports:
    - name: "http"
      port: 8001
      targetPort: 8001
  selector:
    app: warrior
