argocd/archive-warrior/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Archive Warrior
    gethomepage.dev/icon: sh-archivebox
    gethomepage.dev/description: "The ArchiveTeam Warrior is a virtual archiving appliance."
    gethomepage.dev/pod-selector: app=warrior
  labels:
    app.kubernetes.io/instance: archive-warrior-app
  name: warrior-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - warrior.yanello.net
  rules:
    - backendRefs:
        - name: warrior
          namespace: archive-warrior
          port: 8001
